@@ -89,7 +89,6 @@ directory = profiles
 directory = corpus
 directory = lib/Dist/Zilla/MintingProfile
 file      = lib/Dist/Zilla/Plugin/Author/Plicease/Init2.pm
-file      = lib/Dist/Zilla/Plugin/Author/Plicease/PrePodWeaver.pm
 
 [Author::Plicease::Upload]
 [InsertExample]
