@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Remove [Author::Plicease::PrePodWeaver]
   - Explicitly require Perl 5.8.1
 
 1.72      2015-05-27 17:26:27 -0400
